# CKKSEIF

./: .gitignore  CMakeLists.txt  LICENSE  README.md  algorithms.cpp  algorithms.h  embedding.cpp  embedding.h  test.cpp  testcode.cpp  testcode.h  utils.cpp  utils.h
core/: README.md
core/exp/: main_core.cpp
core/include/ckkseif/: algorithms.h  arithmetic.h  bench_runner.h  eif.h  test_core.h  utils.h
core/src/: arithmetic.cpp  bench_runner.cpp  eif.cpp  utils.cpp
core/tests/: test_core.cpp
data/: 42B300d16_8logreg.txt  42B300d16_8weight.txt  42B300d32_16logreg.txt  42B300d32_16weight.txt  42B300d32_8logreg.txt  42B300d32_8weight.txt  42B300d64_8logreg.txt  42B300d64_8weight.txt  42B300d8_8logreg.txt  42B300d8_8weight.txt  6B50d16_8logreg.txt  6B50d16_8weight.txt  6B50d32_16logreg.txt  6B50d32_16weight.txt  6B50d32_8logreg.txt  6B50d32_8weight.txt  6B50d64_8logreg.txt  6B50d64_8weight.txt  6B50d8_8logreg.txt  6B50d8_8weight.txt  compresult.txt  doctfidf.txt  gpt2768d16_8weight.txt  gpt2768d32_8weight.txt  gpt2768d8_8weight.txt  idf_amazon.txt  idxtoword_amazon.txt  reviewtext_amazon.txt  samples_amazon.txt  sentences.txt  tfidf_amazon.txt
modules/hecount/: README.md
modules/hecount/exp/: main_hecount.cpp
modules/hecount/include/ckkseif/hecount/: counting.h  test_count.h
modules/hecount/src/: counting.cpp
modules/hecount/tests/: test_count.cpp
modules/helut/: README.md
modules/helut/exp/: main_helut.cpp
modules/helut/include/ckkseif/helut/: embedding.h  lookup.h  test_helut.h
modules/helut/src/: embedding.cpp  lookup.cpp
modules/helut/tests/: test_helut.cpp
modules/parity/: README.md
modules/parity/exp/: main_parity.cpp
modules/parity/include/ckkseif/parity/: parity.h  test_parity.h
modules/parity/src/: parity.cpp
modules/parity/tests/: test_parity.cpp
